--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Consulta</a></li>
+                                                    <li><a href="viajante.html">Consulta</a></li>
                                                 </ul>
                                             </li>
                                             <li>
