--- a/viajante.html
+++ b/viajante.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,13 @@
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>a clinica</title>
+    <title>A clinica</title>
+    <!-- Favicon no formato .png -->
     <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -23,38 +25,10 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-
     <style>
         b {
             color: #d6a294;
             font-weight: 400;
-        }
-
-        .blog__details__hero {
-            padding: 200px 0;
-            margin-bottom: 30px;
-            border-radius: 10px;
-        }
-
-        .blog__details__pic img {
-            min-width: 100%;
-            margin-bottom: 30px;
-            border-radius: 10px;
-        }
-
-        .consultation__video {
-            height: 674px;
-            width: 1200px;
-        }
-
-        .employer {
-            height: 450px !important;
-            border-radius: 15px;
-        }
-
-        .about .container {
-            padding-bottom: 0;
-            border: none;
         }
     </style>
 </head>
@@ -309,9 +283,9 @@
                                     </ul>
                                 </li>
                                 <a href="#" class="primary-btn" style="
-                                            right: 0;
-                                            position: absolute;
-                                        "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                    right: 0;
+                                    position: absolute;
+                                "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
@@ -326,10 +300,18 @@
     </header>
     <!-- Header Section End -->
 
+
+
+
+
+
+
+
+
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-4">
+    <section class="blog-details spad mt-9">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg" data-setbg="img/blog/details/blog-hero.jpg">
+            <div class="blog__details__hero mb-4  set-bg" data-setbg="img/blog/details/blog-hero8.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
                         <div class="blog__hero__text">
@@ -350,170 +332,80 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="">A Clínica</h2>
-                                        <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                        <h2 class="subtitle fw-bolder">Medicina do Viajante
+                                        </h2>
+                                        <span class="mb-4"><b>Viajar em família é um dos prazeres da
+                                                vida!</b></span>
+                                        <br>
+                                        <p class="mb-4 mt-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
+                                            necessidades
+                                            dos nossos pacientes. Proporcionamos, por isso, a consulta do
+                                            Viajante adaptada ao seu lugar de destino, para todos os elementos da sua
+                                            família. </p>
+
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="blog__details__text ml-4 mr-4">
+                                    <div class="blog__details__text__item">
+                                        <!-- Título da Seção -->
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="section-title">
+                                                    <h5 class=""><b>Esta consulta destina-se a:</b></h5>
+                                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                                </div>
+                                            </div>
+                                        </div>
 
-                            <p>A Clínica nasce em 2025 do sonho de criar um espaço onde as famílias se sintam em casa.
-                                <br><br> Diz o ditado que <b>«para criar uma criança faz falta uma aldeia»</b> e, no
-                                mundo
-                                agitado onde vivemos, cada vez há menos rede
-                                de apoio à família nesta sua missão.
-                                <br><br>A sociedade pede-nos que invertamos os nossos valores e que, em vez de
-                                colocarmos a
-                                família em primeiro lugar,
-                                coloquemos o trabalho. Os nossos filhos e o seu bem-estar devem ser a nossa prioridade
-                                enquanto pais! <br><br>
-                                <b>Quando nasce um bebé, nasce uma mãe e um pai!</b> Nasce um amor incondicional, um
-                                carinho enorme e uma alegria maravilhosa!
-                                Nasce, também, uma culpa e uma preocupação que nos acompanham ao longo da vida. <br><br>
-                                <b> <i> N’A Clínica</i> focamo-nos na unidade nuclear da nossa sociedade: a família!
-                                </b> Neste
-                                espaço
-                                vai encontrar profissionais que
-                                vão acompanhar, apoiar e acarinhar a sua família! <br><br>
-                                Acreditamos firmemente que <b> pais informados, seguros, confiantes e que tenham acesso
-                                    a
-                                    profissionais de saúde de
-                                    excelência,</b> são as peças chave para manter o bem-estar familiar! <br>
-                            </p>
+                                        <p>Adultos ou crianças que vão viajar seja por motivos de turismo e lazer ou
+                                            devido a trabalho e que queiram obter a
+                                            informação mais atualizada.
+                                        </p>
+
+                                        <div class="section-title pt-4">
+                                            <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                            <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                        </div>
+                                        <ul class="list">
+                                            <li><a><i class="fa fa-check-circle"></i> Especificidades do país de destino
+                                                    em relação a doenças e à sua prevenção, cuidados gerais e de
+                                                    Nutrição.</a></li>
+                                            <li><a><i class="fa fa-check-circle"></i> Técnicas que se incluem num
+                                                    determinado
+                                                    procedimento cirúrgico.</a></li>
+                                        </ul>
+                                        <p>
+                                            <br><br>
+                                            <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica
+                                            pertinente de cada paciente. Os pacientes devem trazer sempre os boletins
+                                            de vacinação de todos os elementos da família que vão viajar.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="primary-btn">Marcar Consulta </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!-- Hero Section Begin -->
-                    <section class="hero spad set-bg mt-4" data-setbg="img/hero-2bg.jpg">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6 mt-2 ml-4">
-                                    <div class="hero__text">
-                                        <!-- <span>Bem-vindo à A Clínica</span> -->
-                                        <h2>COMPREENDEMOS o papel fundamental da família e queremos fazer parte
-                                            da sua! <b>Somos a sua aldeia!</b></h2>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                    <!-- Hero Section End -->
+
                 </div>
             </div>
     </section>
     <!-- Blog Details Section End -->
 
 
-    <!-- Hero Section Begin -->
-    <section class="hero spad set-bg mt-8" style="background-color: #b1cad4; color: ffff; height: 33rem;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 mt-2 ml-4">
-                    <div class="text-center">
-                        <div class="icone">
-                            <img src="img/icons/kids.png" alt="">
-                        </div>
-
-                        <h2 class="text-white mb-4">Destaque</h2>
-                        <span class="text-white" style="font-size: 19px;">A nossa visão holística da saúde abrange o seu
-                            todo. Sabemos que a
-                            saúde mental é tão ou mais importante que a saúde
-                            física. Cuidar dos nossos pacientes e das suas famílias desde a empatia e da disponibilidade
-                            para ouvir as suas
-                            preocupações ou receios é a nossa forma de estar como profissionais de saúde. <br><br>
-
-                            A excelência no atendimento aos nossos pacientes é a nossa imagem de marca. <br>
-                            A formação continuada dos nossos profissionais de saúde é imprescindível. <br>
-                            A transmissão de informação científica de qualidade baseada nos estudos mais atuais é o
-                            nosso compromisso. <br>
-                            A Clínica segue as guidelines internacionais validadas pelas entidades responsáveis e
-                            credíveis em cada uma das suas
-                            especialidades.
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Hero Section End -->
-
-    <section class="consultation mt-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 d-flex justify-content-center">
-                    <div class="consultation__video set-bg" data-setbg="img/video.jpg">
-                        <a href="https://www.youtube.com/watch?v=PXsuI67s2AA" class="play-btn video-popup">
-                            <i class="fa fa-play"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- <section class="about spad mt-8">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 d-flex align-items-center">
-                    <div class="about__text">
-                        <div class="section-title">
-                            <h2>Os nossos profissionais</h2>
-                        </div>
-                        <p> <i>A Clínica</i> tem uma equipa de profissionais dedicados e focados em proporcionar a
-                            melhor
-                            experiência possível dos
-                            pacientes na nossa instituição de saúde.</p>
-                        <a href="#" class="primary-btn normal-btn">Conheça a equipa</a>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="about__video employer set-bg" data-setbg="img/doctor/doctor-1.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
 
-    <!-- Seccao de contactos  -->
 
-    <section class="about spad mt-8">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="about__video employer set-bg" data-setbg="img/gallery/clinic.jpg">
 
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 d-flex align-items-center">
-                    <div class="about__text">
-                        <div class="section-title">
-                            <h2 class="mb-2">Venha conhecer o nosso espaço</h2>
-                            <span class="mt-2"> Estamos à sua disposição e queremos que se sinta em casa! </span>
-                        </div>
 
-                        <ul>
-                            <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                                ( R/C, corredor central ao lado do cabeleireiro)
-                            </li>
-                            <li><i class="fa fa-phone"></i> +258 845 8548 54</li>
-                            <li><i class="fa fa-envelope"></i>geral@aclinica-mz.com</li>
-                        </ul>
 
-                        <p>
-                            <b>Nota:</b> Temos parque de estacionamento com segurança 24h para pacientes. Cruzamento da
-                            Avenida Salvador Allende com a
-                            Avenida 24 de Julho, primeira entrada à direita. Informar os seguranças que tem consulta
-                            <i>n’ A Clínica</i>.
-                        </p>
-                        <a href="#" class="primary-btn normal-btn mt-4">Galeria de fotos</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
 
     <!-- Seção de Rodapé Início -->
-    <footer class="footer  mt-8">
+    <footer class="footer">
         <div class="footer__top">
             <div class="container">
                 <div class="row">
@@ -526,7 +418,7 @@
                         <div class="footer__newslatter">
                             <form action="#">
                                 <!-- <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button> -->
+                                        <button type="submit" class="site-btn">Subscrever</button> -->
                             </form>
                         </div>
                     </div>
@@ -614,7 +506,6 @@
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
-
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
