--- a/humanitario.html
+++ b/humanitario.html
@@ -365,10 +365,9 @@
                 <div class="col-lg-12 order-lg-12">
                     <div class="services__details">
                         <div class="row mb-4">
-                            <div class="col-lg-6 col-md-6 col-sm-6">
+                            <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="services__details__title">
-                                    <h1 class="">1.</h1>
-                                    <h3 class="mb-3">Orfanato Feminino Casa Madre Maria Clara em Maputo</h3>
+                                    <h4 class="mb-3">1. Orfanato Feminino Casa Madre Maria Clara em Maputo</h4>
                                     <span> <b>12 de Dezembro de 2024</b></span>
                                 </div>
                             </div>
@@ -440,10 +439,9 @@
                 <div class="col-lg-12 order-lg-12">
                     <div class="services__details">
                         <div class="row mb-4">
-                            <div class="col-lg-6 col-md-6 col-sm-6">
+                            <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="services__details__title">
-                                    <h1 class="">2.</h1>
-                                    <h3>Visita ao Orfanato Feminino Casa Madre Maria Clara em Maputo</h3>
+                                    <h4>2. Visita ao Orfanato Feminino Casa Madre Maria Clara em Maputo</h4>
                                 </div>
                             </div>
                         </div>
