--- a/about.html
+++ b/about.html
@@ -357,18 +357,18 @@
                             </div>
 
                             <p>A Clínica nasce em 2025 do sonho de criar um espaço onde as famílias se sintam em casa.
-                                <br><br> Diz o ditado que <b>«para criar uma criança faz falta uma aldeia»</b> e, no
+                                <br> Diz o ditado que <b>«para criar uma criança faz falta uma aldeia»</b> e, no
                                 mundo
                                 agitado onde vivemos, cada vez há menos rede
                                 de apoio à família nesta sua missão.
-                                <br><br>A sociedade pede-nos que invertamos os nossos valores e que, em vez de
+                                <br>A sociedade pede-nos que invertamos os nossos valores e que, em vez de
                                 colocarmos a
                                 família em primeiro lugar,
                                 coloquemos o trabalho. Os nossos filhos e o seu bem-estar devem ser a nossa prioridade
                                 enquanto pais! <br><br>
                                 <b>Quando nasce um bebé, nasce uma mãe e um pai!</b> Nasce um amor incondicional, um
                                 carinho enorme e uma alegria maravilhosa!
-                                Nasce, também, uma culpa e uma preocupação que nos acompanham ao longo da vida. <br><br>
+                                Nasce, também, uma culpa e uma preocupação que nos acompanham ao longo da vida. <br>
                                 <b> <i> N’A Clínica</i> focamo-nos na unidade nuclear da nossa sociedade: a família!
                                 </b> Neste
                                 espaço
@@ -403,7 +403,8 @@
 
 
     <!-- Hero Section Begin -->
-    <section class="hero spad set-bg mt-8" style="background-color: #b1cad4; color: ffff; height: 33rem;">
+    <section class="hero set-bg mt-8" data-setbg="img/blog/details/blog-hero11.jpg" style='background-image: url("img/blog/details/blog-hero.jpg"); color: ffff;
+        height: 30rem;'>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 mt-2 ml-4">
@@ -412,7 +413,7 @@
                             <img src="img/icons/kids.png" alt="">
                         </div>
 
-                        <h2 class="text-white mb-4">Destaque</h2>
+                        <h2 class="text-white mb-3">Destaque</h2>
                         <span class="text-white" style="font-size: 19px;">A nossa visão holística da saúde abrange o seu
                             todo. Sabemos que a
                             saúde mental é tão ou mais importante que a saúde
