--- a/consultas.html
+++ b/consultas.html
@@ -458,7 +458,9 @@
                         <div class="services__item__text">
                             <h5>Medicina do Viajante</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Consulta de Medicina do Viajante</a>
+                                <li><a href="pages/viajante.html"><i class="fa fa-check-circle"></i> Consulta de
+                                        Medicina do
+                                        Viajante</a>
                                 </li>
                             </ul>
                         </div>
@@ -473,11 +475,14 @@
                         <div class="services__item__text">
                             <h5>Nutrição</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Geral</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Infantil</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Pré-conceção</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Pré-natal</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Diabetes Gestacional</a></li>
+                                <li><a href="pages/nutricao.html#A"><i class="fa fa-check-circle"></i> Geral</a></li>
+                                <li><a href="pages/nutricao.html#B"><i class="fa fa-check-circle"></i> Infantil</a></li>
+                                <li><a href="pages/nutricao.html#C"><i class="fa fa-check-circle"></i> Pré-conceção</a>
+                                </li>
+                                <li><a href="pages/nutricao.html#D"><i class="fa fa-check-circle"></i> Pré-natal</a>
+                                </li>
+                                <li><a href="pages/nutricao.html#E"><i class="fa fa-check-circle"></i> Diabetes
+                                        Gestacional</a></li>
                             </ul>
                         </div>
                     </div>
@@ -491,10 +496,15 @@
                         <div class="services__item__text">
                             <h5>Pediatria</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Pré-natal</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Rotina</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Criança doente</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Introdução alimentar</a></li>
+                                <li><a href="pages/pediatria.html#A"><i class="fa fa-check-circle"></i> Pré-natal</a>
+                                </li>
+                                <li><a href="pages/pediatria.html#B"><i class="fa fa-check-circle"></i> Rotina</a></li>
+                                <li><a href="pages/pediatria.html#C"><i class="fa fa-check-circle"></i> Criança
+                                        doente</a></li>
+                                <li><a href="pages/pediatria.html#D"><i class="fa fa-check-circle"></i> Sono
+                                        Infantil</a></li>
+                                <li><a href="pages/pediatria.html#E"><i class="fa fa-check-circle"></i> Introdução
+                                        alimentar</a></li>
                             </ul>
                         </div>
                     </div>
