--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -82,24 +82,26 @@
     <!-- Header Section End -->
 
 
+
+
+
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
+    <section class="blog-details spad mt-9">
         <div class="container mt-9">
-            <div class="row card-container">
-                <!-- Seção de Texto -->
-                <div class="col-lg-6 col-md-6 col-12 text-section d-flex flex-column justify-content-center">
-                    <div class="text-container">
-                        <h3><img src="../img/icons/nutritional-plan.png" alt="">Atendimento ao Paciente</h3>
-                        <h1 class="name">Calisto Chemane</h1>
-                        <p class="description">Connosco a ajudar famílias desde 2016.</p>
+            <div class="blog__details__hero mb-4  set-bg" data-setbg="../img/blog/details/blog-hero8.jpg">
+                <!-- <div class="row d-flex justify-content-center">
+                    <div class="col-lg-7 text-center">
+                        <div class="blog__hero__text">
+                            <h2>Here’s how you can get a natural glow this party season</h2>
+                            <ul>
+                                <li><img src="img/blog/blog-author.jpg" alt=""> John Doe</li>
+                                <li>Dec 06, 2019</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <!-- Seção de Imagem -->
-                <div class="col-lg-6 col-md-6 col-12 image-section p-0">
-                    <img src="../img/team/team 4.jpg" alt="Ana Castro Santos" alt="Ana Castro Santos">
-                </div>
+                </div> -->
             </div>
-            <div class="row d-flex justify-content-center mt-4">
+            <div class="row d-flex justify-content-center">
                 <div class="col-lg-12">
                     <div class="blog__details__text ml-4 mr-4">
                         <div class="blog__details__text__item">
@@ -107,24 +109,58 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="mb-2 subtitle fw-bolder">Apresentação
+                                        <h2 class="subtitle fw-bolder">Medicina do Viajante
                                         </h2>
+                                        <span class="mb-4"><b>Viajar em família é um dos prazeres da
+                                                vida!</b></span>
                                         <br>
-                                        <p class="mb-4">Estudante universitário no curso de Ciências de Informação
-                                            Geográfica na Universidade Eduardo Mondlane em Maputo,
-                                            Moçambique e formado em Atendimento ao Cliente pela Academia Negócios de
-                                            Saúde, Portugal. <br><br>
-                                            Com mais de 2 anos de experiência de atendimento ao paciente, orgulho-me de
-                                            ter desenvolvido uma abordagem marcada pela
-                                            simpatia, empatia, paciência e compreensão. Descobri uma verdadeira paixão
-                                            por esta área de trabalho, transformando cada
-                                            interação numa oportunidade de oferecer o meu melhor e criar conexões leais
-                                            e genuínas, colocando sempre as necessidades
-                                            dos pacientes em primeiro lugar.
-                                        </p>
-                                        <span class="mb-4 mt-4"><b>«N’A Clínica quero que te sintas em sempre casa,
-                                                acolhido e cuidado como parte da nossa família!»</b></span>
+                                        <p class="mb-4 mt-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
+                                            necessidades
+                                            dos nossos pacientes. Proporcionamos, por isso, a consulta do
+                                            Viajante adaptada ao seu lugar de destino, para todos os elementos da sua
+                                            família. </p>
+
                                     </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="blog__details__text ml-4 mr-4">
+                                    <div class="blog__details__text__item">
+                                        <!-- Título da Seção -->
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="section-title">
+                                                    <h5 class=""><b>Esta consulta destina-se a:</b></h5>
+                                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <p>Adultos ou crianças que vão viajar seja por motivos de turismo e lazer ou
+                                            devido a trabalho e que queiram obter a
+                                            informação mais atualizada.
+                                        </p>
+
+                                        <div class="section-title pt-4">
+                                            <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                            <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                        </div>
+                                        <ul class="list">
+                                            <li><a><i class="fa fa-check-circle"></i> Especificidades do país de destino
+                                                    em relação a doenças e à sua prevenção, cuidados gerais e de
+                                                    Nutrição.</a></li>
+                                            <li><a><i class="fa fa-check-circle"></i> Técnicas que se incluem num
+                                                    determinado
+                                                    procedimento cirúrgico.</a></li>
+                                        </ul>
+                                        <p>
+                                            <br><br>
+                                            <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica
+                                            pertinente de cada paciente. Os pacientes devem trazer sempre os boletins
+                                            de vacinação de todos os elementos da família que vão viajar.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="primary-btn">Marcar Consulta </a>
                                 </div>
                             </div>
                         </div>
@@ -134,6 +170,10 @@
             </div>
     </section>
     <!-- Blog Details Section End -->
+
+
+
+
 
 
 
@@ -240,6 +280,7 @@
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
+
     <!-- Js Plugins -->
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
