--- a/team.html
+++ b/team.html
@@ -373,7 +373,7 @@
 
                             <p>A Clínica tem uma equipa de profissionais dedicados e focados em proporcionar a melhor
                                 experiência possível dos
-                                pacientes na nossa instituição de saúde. <br><br>
+                                pacientes na nossa instituição de saúde. <br>
                                 A nossa equipa multidisciplinar tem como missão acompanhar e apoiar a sua família em
                                 cada passo da jornada de
                                 maternidade e paternidade. <b>Somos a sua aldeia!</b>
