--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -31,6 +31,13 @@
             font-weight: 400;
         }
     </style>
+    <script>
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-container').innerHTML = data; // O conteúdo é carregado como está
+            });
+    </script>
 </head>
 
 <body>
@@ -68,238 +75,12 @@
 
     <!-- Header Section Begin -->
     <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <ul class="header__top__left">
-                            <li><a href="../#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a>
-                            </li>
-                            <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                            </li>
-                            <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="header__top__right">
-                            <a href="../#"><i class="fa fa-facebook"></i></a>
-                            <a href="../#"><i class="fa fa-twitter"></i></a>
-                            <a href="../#"><i class="fa fa-instagram"></i></a>
-                            <a href="../#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div id="header-container">
+
         </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2">
-                    <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" style="width: 80%;" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-10">
-                    <div class="header__menu__option">
-                        <nav class="header__menu">
-                            <ul>
-                                <!-- Início -->
-                                <!-- <li class="active"><a class="arrow" href="./index.html">INÍCIO</a></li> -->
-
-                                <!-- A Clínica -->
-                                <li><a class="arrow" href="./about.html">A Clínica <span
-                                            class="dropdown-arrow"></span></a>
-                                    <ul class="dropdown">
-                                        <li><a href="./about.html">Sobre Nós</a></li>
-                                        <li><a href="./team.html">Equipa</a></li>
-                                        <li><a href="./humanitario.html">O nosso trabalho humanitário</a></li>
-                                        <li><a href="./info.html">Pedido de informação/ Agendamento</a></li>
-                                    </ul>
-                                </li>
-
-                                <!-- Consultas -->
-                                <li><a class="arrow" href="consultas.html">Consultas <span
-                                            class="dropdown-arrow"></span></a>
-                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
-                                        <ul class="dropdown menu">
-                                            <li>
-                                                <span>Amamentação</span>
-                                                <ul class="dropdown-sec">
-
-                                                    <li><a href="pages/amament-pre-parto.html#pre">Consulta
-                                                            Pré-parto</a></li>
-                                                    <li><a href="pages/amament-pre-parto.html#pos">Consulta
-                                                            Pós-parto</a></li>
-
-                                                </ul>
-                                                <br>
-                                                <span class="pt-4">Medicina do Viajante</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Consulta</a></li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <span>Cirurgia</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
-                                                    </li>
-                                                    <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
-                                                    <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
-                                                            superficiais</a></li>
-                                                </ul>
-                                                <br>
-                                                <span>Enfermagem
-                                                </span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="pages/enfermagem.html#domicilio">Apoio domiciliário no
-                                                            pós-parto</a></li>
-                                                    <li><a href="pages/enfermagem.html#conseferm">Consulta de
-                                                            enfermagem</a></li>
-                                                    <li><a href="pages/enfermagem.html#pensos">Pensos</a></li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <span>Nutrição</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Nutrição Geral</a></li>
-                                                    <li><a href="#">Nutrição Infantil</a></li>
-                                                    <li><a href="#">Diabetes Gestacional</a></li>
-                                                    <li><a href="#">Pré-conceção</a></li>
-                                                    <li><a href="#">Pré-natal</a></li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <span>Pediatria</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Pré-natal</a></li>
-                                                    <li><a href="#">Rotina</a></li>
-                                                    <li><a href="#">Criança doente</a></li>
-                                                    <li><a href="#">Consulta de sono infantil</a></li>
-                                                    <li><a href="#">Introdução alimentar</a></li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <span>Terapia ocupacional</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Infantil</a></li>
-                                                    <li><a href="#">Neurológica</a></li>
-                                                    <li><a href="#">Saúde Mental</a></li>
-                                                    <li><a href="#">Snoezelen</a></li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <span>Testes diagnósticos</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Teste do pezinho</a></li>
-                                                    <li><a href="#">Teste rápido de amigdalite bacteriana</a></li>
-                                                    <li><a href="#">Teste rápido de malária</a></li>
-                                                    <li><a href="#">Teste rápido de urina</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-
-                                <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="./additional-services.html">Vacinação<span
-                                            class="dropdown-arrow"></span></a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Adulto</a></li>
-                                        <li><a href="#">Gravidez</a></li>
-                                        <li><a href="#">Infantil</a></li>
-                                        <li><a href="#">Viajante</a></li>
-                                    </ul>
-                                </li>
-                                <!-- Consultas -->
-                                <li>
-                                    <a class="arrow">Gravidez <span class="dropdown-arrow"></span></a>
-                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
-                                        <ul class="dropdown menu grav">
-                                            <li>
-                                                <span>A Clínica durante a gravidez</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Amamentação</a></li>
-                                                    <li><a href="#">Pediatria pré-natal</a></li>
-                                                    <li><a href="#">Nutrição: pré-conceção, pré-natal, Diabetes
-                                                            Gestacional</a></li>
-                                                    <li><a href="#">Snoezelen na gravidez</a></li>
-                                                </ul>
-                                            </li>
-
-                                            <li>
-                                                <span>Preparação para a Amamentação</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Curso Normal em grupo</a></li>
-                                                    <li><a href="#">Curso Individual</a></li>
-                                                    <li><a href="#">Preparation for Breastfeeding in English</a></li>
-                                                </ul>
-                                                <br>
-
-                                                <ul class="dropdown-sec">
-                                                    <span>
-                                                        <li><a href="#" class="primary-btn">
-                                                                Galeria de fotos</a></li>
-                                                    </span>
-                                                </ul>
-
-                                            </li>
-                                            <li>
-                                                <span>Preparação para o parto</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Curso Normal em grupo</a></li>
-                                                    <li><a href="#">Curso Individual</a></li>
-                                                    <li><a href="#">Pre-natal course in English</a></li>
-                                                </ul>
-                                                <br>
-                                                <span>Exercício Físico</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Plano de treino para a gravidez</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-
-                                <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="./additional-services.html">Apoio ao domicílio <span
-                                            class="dropdown-arrow"></span></a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Amamentação</a></li>
-                                        <li><a href="#">Enfermagem</a></li>
-                                        <li><a href="#">Teste do pezinho</a></li>
-                                        <li><a href="#">Pacotes</a></li>
-                                    </ul>
-                                </li><!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="./additional-services.html">Workshops<span
-                                            class="dropdown-arrow"></span></a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Amamentação</a></li>
-                                        <li><a href="#">Bebé</a></li>
-                                        <li><a href="#">Gravidez</a></li>
-                                        <li><a href="#">Introdução alimentar</a></li>
-                                        <li><a href="#">Parentalidade</a></li>
-                                        <li><a href="#">Pediatria</a></li>
-                                        <li><a href="#">Primeiros Socorros Pediátricos</a></li>
-                                        <li><a href="#">Galeria de fotos</a></li>
-                                    </ul>
-                                </li>
-                                <a href="#" class="primary-btn" style="
-                                        right: 0;
-                                        position: absolute;
-                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
-                            </ul>
-
-                        </nav>
-                    </div>
-                </div>
-            </div>
-            <div class="canvas__open">
-                <i class="fa fa-bars"></i>
-            </div>
-        </div>
-
     </header>
     <!-- Header Section End -->
+
 
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-6">
@@ -503,7 +284,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="row">
-                        <div class="card shadow">
+                        <div class="card w-100 shadow">
                             <div class="card-more">
                                 <p class="border-bottom">Neste espaço existem consultas em várias áreas,
                                     tanto
@@ -511,14 +292,14 @@
                                     como na “recuperação pós parto”. Clique em cada um dos ícones seguintes para saber
                                     que consultas tem disponíveis.</p>
                                 <div class="d-flex">
-                                    <div class="col-lg-12 col-md-12 text-center">
+                                    <div class="col-lg-12 col-md-12">
                                         <div class="card-icon justify-content-center">
-                                            <img src="../img/icons/sala-de-cirurgia.png" style="width: 150px;">
+                                            <img src="../img/icons/nurse.png" style="width: 150px;">
                                         </div>
                                         <div class="card-text">
-                                            <button id="con-ciru">Apoio domiciliário no pós-parto</button> <br>
-                                            <button id="circ-anel">Consulta de Enfermagem</button> <br>
-                                            <button id="Sutura">Pensos</button>
+                                            <button id="con-ciru">1. Apoio domiciliário no pós-parto</button> <br>
+                                            <button id="circ-anel">2. Consulta de Enfermagem</button> <br>
+                                            <button id="Sutura">3. Pensos</button>
                                         </div>
                                     </div>
                                 </div>
@@ -651,7 +432,10 @@
             CirurgiaDiv.style.display = 'block'; // Exibe a div Cirurgia
             anelDiv.style.display = 'none';  // Esconde a div pós-parto
             suturaDiv.style.display = 'none';  // Esconde a div pós-parto
-            consultaText.textContent = "Apoio domiciliário no pós-parto"; // Atualiza o texto para "Cirurgia"
+            consultaText.textContent = "1. Apoio domiciliário no pós-parto"; // Atualiza o texto para "Cirurgia"
+            CirurgiaBtn.classList.add("active");
+            anelBtn.classList.remove("active");
+            suturaBtn.classList.remove("active");
         }
 
         // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
@@ -659,7 +443,10 @@
             anelDiv.style.display = 'block'; // Exibe a div pós-parto
             suturaDiv.style.display = 'none'; // Exibe a div pós-parto
             CirurgiaDiv.style.display = 'none';  // Esconde a div Cirurgia
-            consultaText.textContent = "Consulta de Enfermagem"; // Atualiza o texto para "Pós-parto"
+            consultaText.textContent = "2. Consulta de Enfermagem"; // Atualiza o texto para "Pós-parto"
+            anelBtn.classList.add("active");
+            CirurgiaBtn.classList.remove("active");
+            suturaBtn.classList.remove("active");
         }
 
         // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
@@ -667,7 +454,10 @@
             suturaDiv.style.display = 'block'; // Exibe a div pós-parto
             anelDiv.style.display = 'none';  // Esconde a div Cirurgia
             CirurgiaDiv.style.display = 'none';  // Esconde a div Cirurgia
-            consultaText.textContent = "Pensos"; // Atualiza o texto para "Pós-parto"
+            consultaText.textContent = "3. Pensos"; // Atualiza o texto para "Pós-parto"
+            suturaBtn.classList.add("active");
+            anelBtn.classList.remove("active");
+            CirurgiaBtn.classList.remove("active");
         }
         // Verificar o fragmento da URL e inicializar a página de acordo
         window.addEventListener('load', function () {
